--- a/to-do list/style.css
+++ b/to-do list/style.css
@@ -25,7 +25,7 @@ body {
     padding: 5px 10px;
 }
 .container {
-    width: 360px;
+    min-width: 360px;
     min-height: 250px;
     border: 2px solid #27041e;
     border-radius: 20px;
@@ -38,12 +38,16 @@ body {
     text-decoration: underline;
 }
 .container input[type="text"] {
+    width: 68%;
     height: 30px;
     font-size: 18px;
     line-height: 1.5;
     background-color: transparent;
     border: 2px solid #27041e;
     padding-inline: 10px;
+}
+.container input[type="text"]::placeholder {
+    color: #27041e;
 }
 .container input[type="text"]:focus {
     outline: none;
@@ -52,6 +56,7 @@ body {
     font-weight: bold;
 }
 #add-todo-btn {
+    width: 30%;
     font-size: 16px;
     padding: 4px 15px;
     cursor: pointer;
