--- a/to-do list/style.css
+++ b/to-do list/style.css
@@ -25,7 +25,7 @@ body {
     padding: 5px 10px;
 }
 .container {
-    min-width: 360px;
+    width: min(360px, 98%);
     min-height: 250px;
     border: 2px solid #27041e;
     border-radius: 20px;
